# PerpleCXX

./: README.md
StandAloneWithFtnLib/: .gitignore  CMakeLists.txt  PerpleXConfig.cmake.in  PerpleXConfigVersion.cmake  README.txt  README_PerpleXPlugin_BLASLib_SNAFU.txt  ftnSrcFilesModifs.txt  perpleCXXMain.cpp  perplex.cpp  perplex_lookup_composition.prm  pyrolite  questionsForBMyhill.txt  source
StandAloneWithFtnLib/ftnSrcFilesModifs/: olib.f  resub.f  rlib.f  tlib.f
StandAloneWithFtnLib/include/: perplex_c.h
StandAloneWithFtnLib/olex-perplex-stable-691/: CMakeCache.txt  CMakeLists.txt  Makefile  PerpleXConfig.cmake  PerpleXConfig.cmake.in  cmake_install.cmake  frendly.f  include  install_manifest.txt  makefile  perplex.cpp  tlib.f.ok-debug
ThermoData/: componentsHollandPowell633.yml  endMembersMakesHollandPowell.yml  hollandPowellStdConditions.yml  hp11ver.yml  makes.yml  phasesEntitiesHollandPowell.yml  solutionModelsHollandPowell.yml
